1.2.1:

* segway: added new 'data' test baseline with GMTK 1.1.0
* segway: added new 'simplesubseg' test to test subsegment labels
* segway-layer: fixed bigBed conversion when blocksize==0 and added
  segway_layer_bigbed test (thanks to Jay Hesselberth)

1.2.0:

* segway: made matching against unmodified vs. modified partitions output from
  gmtk more lenient to match against
* KNOWN ISSUE: Segway will produce incorrect segmentations if the
  tracks are not specified in the order they appear in the genomedata
  archive providing the data.
* now requires a new version of GMTK (>= 1.0.0 80c1d70cea9d
  (ticket161-2)) for increased speed
* now requires Python >=2.6 (released 3.5 years ago) and <=3.0
  (although we will switch to Python 2.7 when we need it, so if you
  are upgrading, go all the way now)
* now requires Genomedata >=1.3.1
* default setuptools version now 0.6c11
* segway: now has experimental support for running without any cluster
  system or drmaa. By default if nothing is available, or use
  SEGWAY_CLUSTER (thanks to Max Libbrecht)
* segway: now has experimental Torque support. PBS and PBS Pro will
  probably work with some changes--please e-mail Michael if you want
  to help with identifying the necessary changes (thanks to Jay Hesselberth)
* segway: SEGWAY_CLUSTER environment variable allows manual
  specification of a cluster system (e.g. export SEGWAY_CLUSTER=local)
* segway: new escaping method from Genomedata tracknames to GMTK
  tracknames allows any arbitrary Genomedata trackname, but this means
  that previous files will be incompatible, since "_" is now replaced
  by "_5F" and "." by "_2E" (formerly both of these were "_", which
  was ambiguous)
* segway: allow concatenated segmentation of tracks with --trackname
  track1,track2, which gives you only one set of parameters. you may
  need to adjust existing train.tab files to use track_specs instead
  of include_tracknames because of other necessary changes